--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'American poetry -- 20th century'
+- GITenberg
 title: Oklahoma Sunshine
 url: http://www.gutenberg.org/ebooks/28706
